@@ -74,6 +74,7 @@ b716a32de44bd15c6beb6e8b5e357fd26c1fb85a data\mmorpg\affixes\suffix\of_precision
 4fa6e9a6dd814ac613078591c9310f1da2f41192 data\mmorpg\affixes\suffix\of_the_philosopher.json
 1c83c420c82aee867e73ba6a4a69dd01626bb8d9 data\mmorpg\affixes\suffix\of_the_sky.json
 209908a98c2f011f3c5ce82c5195d9bf3830de2e data\mmorpg\affixes\suffix\of_the_titan.json
+9c65c26edc5836bdbb26bb1ce2831b6c7a863d9a data\mmorpg\affixes\suffix\of_the_troll.json
 c55990135534cd67be0c9acf472892caf8fc4f4e data\mmorpg\affixes\suffix\of_the_wind.json
 f2b983400a22bafbdacb7b35d46c5244d7a6cbaf data\mmorpg\affixes\suffix\of_vampirism.json
 855005de546bf569f4f01ae6e9e0a4fce47195b5 data\mmorpg\affixes\suffix\thunder_ele_dmg_jewelry.json
