@@ -21,7 +21,7 @@ public class BasePlayerStatContainer implements ISlashRegistryInit, IApplyableSt
         //base ones
 
         c.base(Health.getInstance(), 0);
-        c.base(HealthRegen.getInstance(), 0.05);
+        c.base(HealthRegen.getInstance(), 0.5);
         c.base(MagicShieldRegen.getInstance(), 0.05F);
         c.base(CriticalHit.getInstance(), 1);
         c.base(CriticalDamage.getInstance(), 0);
